adding data interface; other changes

--- a/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
@@ -6,4 +6,29 @@
 
 <h2>Restaurants!!</h2>
 
-@Model.Message
+@* Since this form as no action attribute, the get request sends the request to /Restaruants/List *@
+<form method="get">
+    <div class="form-group">
+        <div class="input-group">
+            <input type="search" class="form-control" value=""  name="searchTerm"/>
+            <span class="input-group-btn">
+                <button class="btn btn-default">
+                    <i class="glyphicon glyphicon-search"></i>
+                </button>
+            </span>
+        </div>
+    </div>
+</form>
+<table class="table">
+    @foreach(var restaruant in Model.Restaurants)
+    {
+        <tr>
+            <td>@restaruant.Name</td>
+            <td>@restaruant.Location</td>
+            <td>@restaruant.Cuisine</td>
+        </tr>
+    }
+</table>
+<div>
+    @Model.Message
+</div>
