--- a/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
@@ -28,6 +28,13 @@
             <td>@restaruant.Name</td>
             <td>@restaruant.Location</td>
             <td>@restaruant.Cuisine</td>
+            <td>
+                @* Go to the detail page and pass/route this parameter with the request to get the page
+                    The asp-route-... must match the parameter name given in the OnGet method of the model*@
+                <a class="btn btn-lg" asp-page="./Detail" asp-route-restaurantId="@restaruant.Id" asp-route-restaurantLocation="@restaruant.Location">
+                    <i class="glyphicon glyphicon-zoom-in"></i>
+                </a>
+            </td>
         </tr>
     }
 </table>
