--- a/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
@@ -31,7 +31,7 @@
             <td>
                 @* Go to the detail page and pass/route this parameter with the request to get the page
                     The asp-route-... must match the parameter name given in the OnGet method of the model*@
-                <a class="btn btn-lg" asp-page="./Detail" asp-route-restaurantId="@restaruant.Id" asp-route-restaurantLocation="@restaruant.Location">
+                <a class="btn btn-lg" asp-page="./Detail" asp-route-restaurantId="@restaruant.Id">
                     <i class="glyphicon glyphicon-zoom-in"></i>
                 </a>
             </td>
