Redirect users to detail page after editing/creating a new restaurant; set up ability to add new restaurant (not savable yet)

--- a/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/Edit.cshtml
+++ b/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@page "{restaurantId:int}"
+﻿@* The '?' at the end means that it is an optional parameter, we do this
+    So we can reuse this page in "Create" scenarios*@
+@page "{restaurantId:int?}"
 @model OdeToFood.Pages.Restaurants.EditModel
 @{
     ViewData["Title"] = "Edit";
