Add a confirmation message for creating/editing a restaurant using the TempData object and attribute

--- a/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/Detail.cshtml
+++ b/OdeToFood/OdeToFood/OdeToFood/Pages/Restaurants/Detail.cshtml
@@ -7,6 +7,10 @@
 }
 
 <h2>@Model.Restaurant.Name</h2>
+@if (Model.Message != null)
+{
+    <div class="alert alert-info">@Model.Message</div>
+}
 <div>
     Id:  @Model.Restaurant.Id
 </div>
@@ -14,7 +18,7 @@
     Location:  @Model.Restaurant.Location
 </div>
 <div>
-   Cuisine:  @Model.Restaurant.Cuisine
+    Cuisine:  @Model.Restaurant.Cuisine
 </div>
 @* The path provided for this a tag is relative to the location of this view *@
 <a asp-page="./List" class="btn btn-default">All Restaurants</a>
